# WebLoom

./: .gitignore  Makefile.am  README.md  configure.ac
.github/workflows/: build_webloom.yml  run_unittests.yml
src/: Makefile.am  WebLoom.sln
src/DevTest/: DevTest.vcxproj  DevTest.vcxproj.filters  Makefile  TestWebserver.cpp
src/UnitTests/: UnitTests.vcxproj
src/WebLoom/: Context.cpp  Context.h  Header.cpp  Header.h  HttpContentType.cpp  HttpContentType.h  Main.cpp  Makefile  Makefile.am  Request.cpp  Request.h  RequestMethod.h  Response.cpp  Response.h  RouteHandler.cpp  RouteHandler.h  SocketDefinitions.h  Templater.cpp  Templater.h  WebLoom.vcxproj  WebLoom.vcxproj.filters  WebLoomExceptions.h  WebLoomSettings.h
src/WebLoom/core/: FileServer.cpp  FileServer.h  HttpServer.cpp  HttpServer.h  HttpStatus.cpp  HttpStatus.h  IServer.h  Logger.cpp  Logger.h  LoggerSettings.h  Platform.cpp  Platform.h  ServerBase.cpp  ServerBase.h  ThreadPool.h
